# aura-app

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEV_JOURNAL.md  IDEAS.md  LICENSE  PROGRESS.md  README.md  STATE_OF_PROJECT.md
.github/workflows/: ci.yml
RESEARCH/: 2026-06-23-bundle-split.md  2026-06-23-cache-byok-indexer-critique.md  2026-06-23-semantic-cache.md  2026-06-23-sqlite-vec-spike.md
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent.rs  agent_manager.rs  apikey.rs  consensus.rs  embed.rs  env_resolver.rs  error.rs  exec.rs  graph.rs  indexer.rs  lane0.rs  lib.rs  links.rs  markdown.rs  pty.rs  retrieval.rs  search.rs  settings.rs
app/src-tauri/src/commands/: agents.rs  ai.rs  apikey.rs  index.rs  mod.rs  models.rs  modes.rs  pty.rs  settings.rs  vault.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/tests/: advanced_realdb.rs  cache_invalidation.rs  cache_key.rs  chunk_stable_id.rs  consensus_degrade.rs  consensus_prompt.rs  db_smoke.rs  doctor_contract.rs  gen_advanced_assemble.rs  gen_candle_batch.rs  gen_embed_graph.rs  gen_error.rs  gen_loopback.rs  gen_markdown.rs  indexer_smoke.rs  lane0_ollama.rs  links_audit.rs  links_extract.rs  modes_argv.rs  ollama_parse.rs  prune.rs  pty_argv.rs  search_rrf.rs  semantic_cache_eval.rs  settings_robust.rs  stress_reindex.rs  vault_guard.rs
aura-cli/: README.md  aura
contracts/: doctor.fixture.json  doctor.schema.json
docs/: ARCHITECTURE.md  ROADMAP.md  development.md  glossary.md  philosophy.md  plan-v2.1.md  simple.md  ultraplan-FINAL.md  vector-optimization-notes.md
docs/assets/: _gen_banner.py  _gen_graph.py  _gen_value.py  (+1 more)
scripts/: soul_check.py
(+26 files in other folders)
