[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
pulldown-cmark = "0.13.4"
petgraph = "0.8.3"
walkdir = "2.5.0"
sha2 = "0.11.0"
dirs = "6.0.0"
regex = "1.12.4"
notify = "8.2.0"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "process", "io-util", "macros", "sync", "time"] }
command-group = { version = "5.0.1", features = ["tokio"] }
ureq = { version = "3.3.0", features = ["json"] }
portable-pty = "0.9.0"
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.23.1", optional = true }
hf-hub = { version = "0.5.0", optional = true }

[features]
# Opt-in gerçek yerel embedding (e5-small, candle/Metal). Varsayılan KAPALI:
# default build StubEmbedder kullanır (FTS5 ana arama). `cargo build --features candle`.
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
